--- a/src/components/categoryButton.css
+++ b/src/components/categoryButton.css
@@ -1,24 +1,36 @@
 .wrapper-category {
   /* border: 1px solid rgb(14, 15, 15); */
   /* margin-right: 100px; */
-overflow: hidden;
+ 
+  overflow: hidden;
+  width: 148px;
   position: absolute;
   border-radius: 8px;
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
+.active-category{
+  width:158px;
+  left: 5px;
+}
 .btn-category {
-  width: 148px;
-  min-height: 56px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+  width: inherit;
+  height: 56px;
   color: #3f3f3f;
   font-family: Poppins;
   font-size: 16px;
-  font-style: normal;
   font-weight: 500;
   line-height: normal;
-  /* border: 1px solid red; */
   border: none;
   background: #fff;
+}
+.btn-category:hover,
+:focus {
+  color: #7b61ff;
 }
 .category-option {
   border-top: 1px solid #aca7c3;
