--- a/src/components/eventList.css
+++ b/src/components/eventList.css
@@ -1,35 +1,128 @@
+.card-list {
+  margin-top: 40px;
+  list-style: none;
+  display: grid;
+  grid-template-columns: repeat(4, 302px);
+  grid-template-rows: repeat(2, 480px);
+  grid-gap: 40px 24px;
+  list-style: none;
+  padding: 0;
+}
+.card-item {
+  position: relative;
+  width: 302px;
+  height: 480px;
+  background: #fff;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 12px;
+  box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
+}
+.card-img-wrapper {
+  position: absolute;
+  top: 0;
+}
+.card-img {
+  object-fit: cover;
+}
+.mark-height {
+  display: flex;
+  position: absolute;
+  top: 0;
+  display: flex;
+  gap: 12px;
+  margin-top: 12px;
+  margin-left: 12px;
+  color: #7b61ff;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 142.857% */
+}
+.mark-category {
+  padding: 6px 12px;
+  border-radius: 8px;
+  background: #fff;
+}
+.mark-priority {
+  padding: 6px 12px;
+  border-radius: 8px;
+  background: #fff;
+}
+.mark-down {
+  top: -39px;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  padding: 8px 16px;
+  background: rgba(255, 255, 255, 0.8);
+  color: #7b61ff;
+  font-family: Poppins;
+  font-size: 14px;
+  line-height: 1.7;
+}
+.time {
+}
+.location {
+}
+.card-content {
+  position: absolute;
+  display: block;
+  justify-content: space-between;
+  bottom: 0;
+  height: 36%;
+  background: #fff;
+  transition: height 200ms linear;
+}
+.card-item:hover {
+  .card-content {
+      height: 43%;
+    transition: height 200ms linear;
+  }
 
-.card-list{
-    margin-top: 40px;
-    list-style: none;
-    display: grid;
-    grid-template-columns: repeat(4, 302px);
-    grid-template-rows: repeat(2, 480px);
-    grid-gap:40px 24px ;
-    list-style: none;
-    padding: 0;
-
+  .card-more {
+    transform: translateY(0%);
+    transition: transform 100ms linear;
+  }
 }
-.card-item{
-    overflow: hidden;
-    border: 1px solid #ccc;
-    border-radius: 12px;
-    box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
+.card-title {
+  color: #1c1b1f;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1, 5;
+  padding: 8px 15px;
 }
-.back-img{
-    background-image: url(../../public/images/flowers.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-origin: content-box;
-   
-    width: 302px;
-    height:296px ;
+.card-body {
+  color: #49454f;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1, 4;
+  padding: 8px 15px;
 }
-.mark-height{}
-.mark-category{}
-.mark-priority{}
-.mark-dow{}
-.time{}
-.location{}
-.card-title{}
-.card-body{}
+.card-more {
+  display: grid;
+  transform: translateY(75%);
+  transition: transform 200ms linear;
+  justify-content: end;
+  padding: 16px;
+}
+.button-more {
+  padding: 10px 24px;
+  border: none;
+  border-radius: 8px;
+  background: #7b61ff;
+  color: #fff;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.43;
+}
