--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,7 +1,8 @@
 
 .container{
   margin: 0px auto;
-  height: 100vh;
+  padding-bottom: 150px;
+  /* height: 100vh; */
   background-image: url('../../public/images/Geo\ Wave\ 22.png');
   background-repeat: no-repeat;
   background-position: bottom;
