--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,11 +2,12 @@
 .container{
   margin: 0px auto;
   padding-bottom: 150px;
-  /* height: 100vh; */
+  height: 100vh;
   background-image: url('../../public/images/Geo\ Wave\ 22.png');
   background-repeat: no-repeat;
   background-position: bottom;
   background-size: cover;
+  background-position: initial;
 }
 
 .header {
