--- a/src/pages/createEvent.css
+++ b/src/pages/createEvent.css
@@ -41,6 +41,7 @@ line-height: normal; */
   justify-content: space-between;
 }
 .input-column {
+
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -64,7 +65,13 @@ line-height: normal; */
   align-items: center;
   border-radius: 8px;
   border: 1px solid var(--divider, #aca7c3);
+  text-transform: capitalize;
+  color: #3f3f3f;
   resize: none;
+}
+textarea {height: 155px;}
+.input-column input{
+  height: 55px;
 }
 .input-column label p {
   margin-bottom: 8px;
