--- a/src/components/eventList.css
+++ b/src/components/eventList.css
@@ -23,7 +23,9 @@
   top: 0;
 }
 .card-img {
-  object-fit: cover;
+  object-fit: fill;
+  width: 300px;
+  height: 308px;
 }
 .mark-height {
   display: flex;
@@ -50,6 +52,15 @@
   padding: 6px 12px;
   border-radius: 8px;
   background: #fff;
+}
+.priority-low {
+  color: #6BD475; 
+}
+.priority-medium {
+  color: #E2A300; 
+}
+.priority-high {
+  color: #FF2B77;
 }
 .mark-down {
   top: -39px;
@@ -79,7 +90,7 @@
 }
 .card-item:hover {
   .card-content {
-      height: 43%;
+    height: 43%;
     transition: height 200ms linear;
   }
 
@@ -98,13 +109,17 @@
   padding: 8px 15px;
 }
 .card-body {
+  width: 300px;
+  height: 84px;
   color: #49454f;
   font-family: Poppins;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 1, 4;
+  line-height: 1.4;
   padding: 8px 15px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .card-more {
   display: grid;
