--- a/src/components/eventList.css
+++ b/src/components/eventList.css
@@ -1,17 +1,26 @@
+.card-list-wrapper{
+  margin: auto;
+}
+
 .card-list {
-  margin-top: 40px;
+  margin-top: 2.5rem;
   list-style: none;
   display: grid;
-  grid-template-columns: repeat(4, 302px);
-  grid-template-rows: repeat(2, 480px);
-  grid-gap: 40px 24px;
+  grid-template-columns: repeat(4, 18.875rem);
+  grid-template-rows: repeat(2, 30rem);
+  grid-gap: 2.5rem 1.5rem;
   list-style: none;
   padding: 0;
 }
+@media (max-width: 1439px) {
+  .card-list {
+    grid-template-columns: repeat(2, 18.875rem);
+  }
+}
 .card-item {
   position: relative;
-  width: 302px;
-  height: 480px;
+  width: 18.875rem;
+  height: 30rem;
   background: #fff;
   overflow: hidden;
   border: 1px solid #ccc;
@@ -24,55 +33,55 @@
 }
 .card-img {
   object-fit: fill;
-  width: 300px;
-  height: 308px;
+  width: 18.75rem;
+  height: 19.25rem;
 }
 .mark-height {
   display: flex;
   position: absolute;
   top: 0;
   display: flex;
-  gap: 12px;
-  margin-top: 12px;
-  margin-left: 12px;
+  gap: 0.75rem;
+  margin-top: 0.75rem;
+  margin-left: 0.75rem;
   color: #7b61ff;
   text-align: center;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
-  line-height: 20px; /* 142.857% */
+  line-height: 1.25rem; /* 142.857% */
 }
 .mark-category {
-  padding: 6px 12px;
-  border-radius: 8px;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.5rem;
   background: #fff;
 }
 .mark-priority {
-  padding: 6px 12px;
-  border-radius: 8px;
+  padding: 0.375rem 0.75rem;
+  border-radius: 0.5rem;
   background: #fff;
 }
 .priority-low {
-  color: #6BD475; 
+  color: #6bd475;
 }
 .priority-medium {
-  color: #E2A300; 
+  color: #e2a300;
 }
 .priority-high {
-  color: #FF2B77;
+  color: #ff2b77;
 }
 .mark-down {
-  top: -39px;
+  top: -2.4375rem;
   display: flex;
   justify-content: space-between;
   width: 100%;
   position: absolute;
-  padding: 8px 16px;
+  padding: 0.5rem 1rem;
   background: rgba(255, 255, 255, 0.8);
   color: #7b61ff;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.7;
 }
 .time {
@@ -102,22 +111,22 @@
 .card-title {
   color: #1c1b1f;
   font-family: Poppins;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1, 5;
-  padding: 8px 15px;
+  padding: 0.5rem 0.9375rem;
 }
 .card-body {
-  width: 300px;
-  height: 84px;
+  width: 18.75rem;
+  height: 5.25rem;
   color: #49454f;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 400;
   line-height: 1.4;
-  padding: 8px 15px;
+  padding: 0.5rem 0.9375rem;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -126,17 +135,17 @@
   transform: translateY(75%);
   transition: transform 200ms linear;
   justify-content: end;
-  padding: 16px;
+  padding: 1rem;
 }
 .button-more {
-  padding: 10px 24px;
+  padding: 0.625rem 1.5rem;
   border: none;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #7b61ff;
   color: #fff;
   text-align: center;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.43;
