--- a/src/components/pagination.css
+++ b/src/components/pagination.css
@@ -4,36 +4,36 @@
   justify-content: flex-end;
 }
 .pagination {
-  margin-bottom: 77px;
-  margin-top: 32px;
+  margin-bottom: 4.8125rem;
+  margin-top: 2rem;
   margin-left: auto;
   display: inline-flex;
-  gap: 20px;
-  padding: 10px;
+  gap: 1.25rem;
+  padding: 0.625rem;
   list-style: none;
   margin-left: auto;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
   justify-content: flex-end;
 }
 .pagination-previous {
-  padding: 20px;
+  padding: 1.25rem;
   cursor: pointer;
 }
 .pagination-next {
-  padding: 20px;
+  padding: 1.25rem;
   cursor: pointer;
 }
 .pagination-disabled {
 }
 .pagination-item {
   cursor: pointer;
-  padding: 19px;
+  padding: 1.1875rem;
   color: #aca7c3;
   text-align: center;
   font-family: Poppins;
-  font-size: 18px;
+  font-size: 1.125rem;
   font-style: normal;
   font-weight: 800;
   line-height: normal;
