--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ button {
   width: fit-content;
 }
 .react-datepicker {
-  height: 300px;
+  height: 18.75rem;
 }
 .cancel-button {
   position: absolute;
@@ -55,8 +55,8 @@ button {
   background-color: #f44336;
   color: white;
   border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.3125rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
 }
 .set-button {
@@ -66,16 +66,16 @@ button {
   background-color: #7316c5;
   color: white;
   border: none;
-  padding: 5px 10px;
-  border-radius: 4px;
+  padding: 0.3125rem 0.625rem;
+  border-radius: 0.25rem;
   cursor: pointer;
 }
 
 .date-input {
-  padding-left: 40px;
-  width: 120px;
-  height: 30px;
-  font-size: 14px;
+  padding-left: 2.5rem;
+  width: 7.5rem;
+  height: 1.875rem;
+  font-size: 0.875rem;
 }
 
 .react-datepicker__triangle {
