--- a/src/pages/createEvent.css
+++ b/src/pages/createEvent.css
@@ -1,25 +1,25 @@
 .add_event-container {
-  max-width: 1440px;
-  margin: 0px auto;
+  max-width: 90rem;
+  margin: 0rem auto;
   height: 100vh;
-  padding: 20px 80px 0 84px;
+  padding: 1.25rem 5rem 0 5.25rem;
 }
 .link_back {
   display: inline-flex;
   align-items: center;
   color: #7b61ff;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-bottom: 18px;
+  margin-bottom: 1.125rem;
 }
 .link_back:hover {
   color: #888888;
 }
 .link_back svg {
-  margin-right: 8px;
+  margin-right: 0.5rem;
 }
 .add_event-title {
   color: #3f3f3f;
@@ -28,11 +28,11 @@
 font-style: normal;
 font-weight: 600;
 line-height: normal; */
-  margin-bottom: 25px;
+  margin-bottom: 1.5625rem;
 }
 .add_event-form {
-  padding: 40px;
-  border-radius: 8px;
+  padding: 2.5rem;
+  border-radius: 0.5rem;
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
@@ -50,20 +50,20 @@ line-height: normal; */
   flex-direction: column;
   color: #7b61ff;
   font-family: Poppins;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 16px;
-  letter-spacing: 0.4px;
+  line-height: 1rem;
+  letter-spacing: 0.025rem;
 }
 .input-column input,
 textarea {
   display: flex;
-  min-width: 372px;
-  padding: 16px 12px;
+  min-width: 23.25rem;
+  padding: 1rem 0.75rem;
   justify-content: space-between;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   border: 1px solid var(--divider, #aca7c3);
   color: #3f3f3f;
   resize: none;
@@ -72,24 +72,24 @@ textarea {
   text-transform: uppercase;
 }
 textarea {
-  height: 155px;
+  height: 9.6875rem;
 }
 .input-column input {
-  height: 55px;
+  height: 3.4375rem;
 }
 .input-column label p {
-  margin-bottom: 8px;
+  margin-bottom: 0.5rem;
 }
 .add_event-button {
-  margin-top: 78px;
+  margin-top: 4.875rem;
   display: block;
   margin-left: auto;
   color: #fff;
   font-family: Poppins;
   font-weight: 500;
-  width: 193px;
-  padding: 16px 12px;
-  border-radius: 8px;
+  width: 12.0625rem;
+  padding: 1rem 0.75rem;
+  border-radius: 0.5rem;
   background: #7b61ff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
