--- a/src/pages/event.css
+++ b/src/pages/event.css
@@ -1,23 +1,23 @@
 .event-container {
-  max-width: 1440px;
-  margin: 0px auto;
+  max-width: 90rem;
+  margin: 0rem auto;
   height: 100vh;
-  padding: 20px 80px 0 84px;
+  padding: 1.25rem 5rem 0 5.25rem;
 }
 .event-content-wrapper {
-  width: 628px;
-  height: 492px;
-  margin: 17px auto 0;
+  width: 39.25rem;
+  height: 30.75rem;
+  margin: 1.0625rem auto 0;
 }
 .event-title {
   color: #3f3f3f;
   font-family: Poppins;
-  margin-bottom: 14px;
+  margin-bottom: 0.875rem;
 }
 .event-content {
   width: 100%;
   height: 100%;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
@@ -25,31 +25,31 @@
   width: 100%;
   height: 55%;
   object-fit: cover;
-  border-radius: 8px;
+  border-radius: 0.5rem;
 }
 .event-text {
-  margin: 20px 10px 12px;
+  margin: 1.25rem 0.625rem 0.75rem;
   color: #49454f;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.4;
 }
 .event-chips-wrapper {
   display: inline-flex;
-  gap: 12px;
+  gap: 0.75rem;
 }
 .event-chip {
-  border-radius: 8px;
-  padding: 8px 12px;
+  border-radius: 0.5rem;
+  padding: 0.5rem 0.75rem;
   background: #fff;
   box-shadow: 4px 5px 9px 0px rgba(166, 141, 174, 0.28);
   color: #7b61ff;
   font-family: Poppins;
-  font-size: 14px;
+  font-size: 0.875rem;
   line-height: 1.4;
 }
 .event-chip:first-child {
-  margin-left: 10px;
+  margin-left: 0.625rem;
 }
 .priority-low {
   color: #6BD475; 
@@ -63,17 +63,17 @@
 .event-buttons-wrapper {
   display: flex;
   justify-content: flex-end;
-  margin-top: 24px;
-  margin-right: 40px;
-  gap: 16px;
+  margin-top: 1.5rem;
+  margin-right: 2.5rem;
+  gap: 1rem;
   font-family: Poppins;
-  font-size: 12px;
+  font-size: 0.75rem;
   line-height: 1.33;
 }
 .event-button-edit {
   color: #7b61ff;
-  padding: 8px 16px;
-  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
   border: 1px solid #7b61ff;
   background: #fff;
 }
@@ -84,8 +84,8 @@
 }
 .event-button-delete {
   border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
   color: #fff;
   background: #7b61ff;
 }
