--- a/src/components/eventList.css
+++ b/src/components/eventList.css
@@ -17,6 +17,11 @@
     grid-template-columns: repeat(2, 18.875rem);
   }
 }
+@media (max-width: 768px) {
+  .card-list {
+    grid-template-columns: repeat(1, 271px);
+  }
+}
 .card-item {
   position: relative;
   width: 18.875rem;
@@ -27,6 +32,12 @@
   border-radius: 12px;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
+@media (max-width: 768px) {
+  .card-item{
+    width: 16.9375rem;
+  }
+}
+
 .card-img-wrapper {
   position: absolute;
   top: 0;
@@ -118,7 +129,7 @@
   padding: 0.5rem 0.9375rem;
 }
 .card-body {
-  width: 18.75rem;
+  width: 100%;
   height: 5.25rem;
   color: #49454f;
   font-family: Poppins;
