--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -21,16 +21,19 @@
   justify-content: space-between;
   align-items: center;
   height: 5.75rem;
-  padding: 0 5.4375rem;
+  padding: 0 87px;
+}
+@media (max-width: 768px) {
+  .header-wraper {
+    flex-direction: column;
+    padding: 0 24px;
+  }
 }
 
 .header-logo {
   color: #7b61ff;
   font-family: Alata;
   font-size: 1.5rem;
-  /* font-style: normal;
-font-weight: 400;
-line-height: normal; */
 }
 
 .header-nav {
@@ -44,10 +47,17 @@ line-height: normal; */
   border-radius: 0.5rem;
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
-  width: 25.625rem;
+  width: 410px;
   height: 3rem;
 }
+@media (max-width: 768px) {
+  .search-form {
+    width: 272px;
+    margin-top: 31px;
+    margin-right: auto;
 
+  }
+}
 .search {
   border: none;
   outline: white;
@@ -70,6 +80,11 @@ line-height: normal; */
   background: #fff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
 }
+@media (max-width: 768px) {
+  .wrapper-select {
+    display: none;
+  }
+}
 .select {
   width: 3rem;
   font-family: Poppins;
@@ -85,8 +100,22 @@ line-height: normal; */
   max-width: 90rem;
   margin: 0rem auto;
   height: 100%;
-  padding: 3.75rem 5rem 0 5.25rem;
+  padding: 60px 80px 0 84px;
 }
+@media (max-width: 1439px) {
+  .wrapper-main {
+   max-width: 90rem;
+padding: 40px 40px 0 ;
+  }
+}
+@media (max-width: 768px) {
+  .wrapper-main {
+    max-width: 90rem;
+    padding: 40px 24px 0 ;
+  }
+}
+
+
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -101,11 +130,26 @@ line-height: normal; */
   font-weight: 600;
   line-height: normal;
 }
+@media (max-width: 1439px) {
+  .main-title {
+    display: none;
+  }
+}
 .wrapper {
-  width: 32.375rem;
+  width: 518px;
   height: 3.5rem;
   display: flex;
   position: relative;
+}
+@media (max-width: 1439px) {
+  .wrapper {
+    margin: auto;
+  }
+}
+@media (max-width: 768px) {
+  .wrapper {
+    width: 271px;
+  }
 }
 .nav-link {
   display: flex;
@@ -114,7 +158,7 @@ line-height: normal; */
   width: 12.0625rem;
   height: 3.5rem;
   padding: 1rem 0.75rem;
-  left: 20.3125rem;
+  right: 0;
   border-radius: 0.5rem;
   background: #7b61ff;
   box-shadow: 2px 4px 9px 0px rgba(166, 141, 174, 0.28);
@@ -124,8 +168,16 @@ line-height: normal; */
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  text-decoration: none;
 }
+@media (max-width: 768px) {
+  .nav-link{
+    width:3.5rem ;
+  }
+  .nav-link span{
+    display: none;
+  }
+}
+
 .nav-link:hover {
   color: #3f3f3f;
 }
